@@ -3,7 +3,3 @@
 atftpd
 #nfs-user-server
 nfs-kernel-server
-bzip2
-sg3-utils
-minicom
-syslinux
